--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "emailjs": "^3.8.0",
+    "emailjs-com": "^3.2.0",
     "express": "^4.17.3",
     "graphql": "^16.3.0",
     "graphql-request": "^4.0.0",
